[package]
name = "wwcombo"
version = "0.1.0"
description = "Wuthering Waves combo trainer"
authors = ["NovaWallace"]
edition = "2021"

[lib]
name = "wwcombo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"
